[gd_scene load_steps=6 format=2]

[ext_resource path="res://Art/Options-pix.png" type="Texture" id=1]
[ext_resource path="res://Art/Panel001.png" type="Texture" id=2]
[ext_resource path="res://Menus/MenuFont.tres" type="DynamicFont" id=3]
[ext_resource path="res://Art/Background.png" type="Texture" id=6]
[ext_resource path="res://Menus/Options.gd" type="Script" id=7]

[node name="Options" type="Control"]
margin_right = 1024.0
margin_bottom = 600.0
mouse_filter = 2
script = ExtResource( 7 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Background" type="TextureRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
texture = ExtResource( 6 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="OptionsButton" type="TextureButton" parent="."]
anchor_left = 1.0
anchor_right = 1.0
margin_left = -64.2502
margin_top = 14.6832
margin_right = -14.2502
margin_bottom = 64.6833
rect_min_size = Vector2( 50, 50 )
texture_normal = ExtResource( 1 )
expand = true
stretch_mode = 5
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Menu" type="CenterContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -0.374634
margin_right = -0.374634
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MarginContainer" type="MarginContainer" parent="Menu"]
margin_left = 362.0
margin_top = 116.0
margin_right = 662.0
margin_bottom = 484.0
rect_min_size = Vector2( 300, 0 )
custom_constants/margin_right = 20
custom_constants/margin_top = 20
custom_constants/margin_left = 20
custom_constants/margin_bottom = 20
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="Menu/MarginContainer"]
margin_left = 20.0
margin_top = 20.0
margin_right = 280.0
margin_bottom = 348.0

[node name="MarginContainer3" type="MarginContainer" parent="Menu/MarginContainer/VBoxContainer"]
margin_right = 260.0
margin_bottom = 76.0

[node name="TextureRect" type="NinePatchRect" parent="Menu/MarginContainer/VBoxContainer/MarginContainer3"]
visible = false
margin_right = 260.0
margin_bottom = 76.0
texture = ExtResource( 2 )
patch_margin_left = 33
patch_margin_top = 29
patch_margin_right = 27
patch_margin_bottom = 24

[node name="MarginContainer" type="MarginContainer" parent="Menu/MarginContainer/VBoxContainer/MarginContainer3"]
margin_right = 260.0
margin_bottom = 76.0
custom_constants/margin_right = 10
custom_constants/margin_top = 10
custom_constants/margin_left = 10
custom_constants/margin_bottom = 10

[node name="Resume" type="Button" parent="Menu/MarginContainer/VBoxContainer/MarginContainer3/MarginContainer"]
margin_left = 10.0
margin_top = 10.0
margin_right = 250.0
margin_bottom = 66.0
custom_fonts/font = ExtResource( 3 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_colors/font_color_hover = Color( 0.2, 0.2, 0.2, 1 )
text = "RESUME"
flat = true

[node name="MarginContainer6" type="MarginContainer" parent="Menu/MarginContainer/VBoxContainer"]
margin_top = 80.0
margin_right = 260.0
margin_bottom = 156.0

[node name="TextureRect" type="NinePatchRect" parent="Menu/MarginContainer/VBoxContainer/MarginContainer6"]
visible = false
margin_right = 260.0
margin_bottom = 76.0
texture = ExtResource( 2 )
patch_margin_left = 33
patch_margin_top = 29
patch_margin_right = 27
patch_margin_bottom = 24

[node name="MarginContainer" type="MarginContainer" parent="Menu/MarginContainer/VBoxContainer/MarginContainer6"]
margin_right = 260.0
margin_bottom = 76.0
custom_constants/margin_right = 10
custom_constants/margin_top = 10
custom_constants/margin_left = 10
custom_constants/margin_bottom = 10

[node name="MainMenu" type="Button" parent="Menu/MarginContainer/VBoxContainer/MarginContainer6/MarginContainer"]
margin_left = 10.0
margin_top = 10.0
margin_right = 250.0
margin_bottom = 66.0
custom_fonts/font = ExtResource( 3 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_colors/font_color_hover = Color( 0.2, 0.2, 0.2, 1 )
text = "MAIN MENU"
flat = true

[node name="MarginContainer5" type="MarginContainer" parent="Menu/MarginContainer/VBoxContainer"]
margin_top = 160.0
margin_right = 260.0
margin_bottom = 242.0

[node name="TextureRect" type="NinePatchRect" parent="Menu/MarginContainer/VBoxContainer/MarginContainer5"]
visible = false
margin_right = 260.0
margin_bottom = 82.0
texture = ExtResource( 2 )
patch_margin_left = 33
patch_margin_top = 29
patch_margin_right = 27
patch_margin_bottom = 24

[node name="MarginContainer" type="MarginContainer" parent="Menu/MarginContainer/VBoxContainer/MarginContainer5"]
margin_right = 260.0
margin_bottom = 82.0
custom_constants/margin_right = 13
custom_constants/margin_top = 13
custom_constants/margin_left = 13
custom_constants/margin_bottom = 13

[node name="Restart" type="Button" parent="Menu/MarginContainer/VBoxContainer/MarginContainer5/MarginContainer"]
margin_left = 13.0
margin_top = 13.0
margin_right = 247.0
margin_bottom = 69.0
custom_fonts/font = ExtResource( 3 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_colors/font_color_hover = Color( 0.2, 0.2, 0.2, 1 )
text = "RESTART"
flat = true

[node name="MarginContainer4" type="MarginContainer" parent="Menu/MarginContainer/VBoxContainer"]
margin_top = 246.0
margin_right = 260.0
margin_bottom = 328.0

[node name="TextureRect" type="NinePatchRect" parent="Menu/MarginContainer/VBoxContainer/MarginContainer4"]
visible = false
margin_right = 260.0
margin_bottom = 82.0
texture = ExtResource( 2 )
patch_margin_left = 33
patch_margin_top = 29
patch_margin_right = 27
patch_margin_bottom = 24

[node name="MarginContainer" type="MarginContainer" parent="Menu/MarginContainer/VBoxContainer/MarginContainer4"]
margin_right = 260.0
margin_bottom = 82.0
custom_constants/margin_right = 13
custom_constants/margin_top = 13
custom_constants/margin_left = 13
custom_constants/margin_bottom = 13

[node name="Exit" type="Button" parent="Menu/MarginContainer/VBoxContainer/MarginContainer4/MarginContainer"]
margin_left = 13.0
margin_top = 13.0
margin_right = 247.0
margin_bottom = 69.0
custom_fonts/font = ExtResource( 3 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_colors/font_color_hover = Color( 0.2, 0.2, 0.2, 1 )
text = "EXIT"
flat = true
[connection signal="pressed" from="OptionsButton" to="." method="_on_OptionsButton_pressed"]
[connection signal="pressed" from="Menu/MarginContainer/VBoxContainer/MarginContainer3/MarginContainer/Resume" to="." method="_on_Resume_pressed"]
[connection signal="pressed" from="Menu/MarginContainer/VBoxContainer/MarginContainer6/MarginContainer/MainMenu" to="." method="_on_MainMenu_pressed"]
[connection signal="pressed" from="Menu/MarginContainer/VBoxContainer/MarginContainer5/MarginContainer/Restart" to="." method="_on_Restart_pressed"]
[connection signal="pressed" from="Menu/MarginContainer/VBoxContainer/MarginContainer4/MarginContainer/Exit" to="." method="_on_Exit_pressed"]
